// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`get-chart-data mapping layer — golden fixture > every requestable field at once > matches the golden snapshot 1`] = `
{
  "accident": {
    "date": "2026-01-10",
    "resourceId": "cond-accident",
    "state": "IL",
    "type": [
      "AA",
    ],
  },
  "addToVisitNote": {
    "value": true,
  },
  "addendumNote": {
    "text": "Legacy single-string addendum",
  },
  "aiChat": {
    "documents": [
      {
        "content": [
          {
            "attachment": {
              "title": "AI consult note",
              "url": "https://z3.example/ai/consult-note.json",
            },
          },
        ],
        "context": {
          "encounter": [
            {
              "reference": "Encounter/11111111-1111-4111-8111-111111111111",
            },
          ],
        },
        "date": "2026-01-15T12:00:00.000Z",
        "extension": [
          {
            "url": "https://extensions.fhir.zapehr.com/provider",
            "valueReference": {
              "reference": "Practitioner/33333333-3333-4333-8333-333333333333",
            },
          },
        ],
        "id": "dr-ai-consult-note",
        "resourceType": "DocumentReference",
        "status": "current",
        "subject": {
          "reference": "Patient/22222222-2222-4222-8222-222222222222",
        },
        "type": {
          "coding": [
            {
              "code": "11488-4",
              "display": "Consult note",
              "system": "http://loinc.org",
            },
          ],
        },
      },
    ],
    "hasPendingRecording": true,
    "providers": [],
  },
  "birthHistory": [
    {
      "field": "weight",
      "flag": undefined,
      "note": "Term delivery",
      "resourceId": "obs-birth-weight",
      "value": 3.4,
    },
  ],
  "chiefComplaint": {
    "resourceId": "cond-chief-complaint",
    "text": "Sore throat for 3 days",
  },
  "disposition": {
    "followUp": [
      {
        "note": "ENT if symptoms persist",
        "type": "ent",
      },
    ],
    "followUpIn": 3,
    "labService": [],
    "note": "Follow up with PCP in 3 days",
    "nothingToEatOrDrink": undefined,
    "reason": undefined,
    "refusalOfEmsTransport": undefined,
    "specialty": undefined,
    "specialtyOther": undefined,
    "type": "pcp",
    "virusTest": [],
  },
  "emCode": {
    "code": "99214",
    "display": "Office visit, established patient, moderate",
    "modifier": undefined,
    "resourceId": "proc-em-99214",
  },
  "episodeOfCare": [
    {
      "code": "hospitalization",
      "display": "Pneumonia (2024)",
      "resourceId": "eoc-pneumonia",
    },
  ],
  "externalLabResults": {
    "labOrderResults": [],
    "resultsPending": undefined,
  },
  "historyOfPresentIllness": {
    "resourceId": "cond-hpi",
    "text": "Gradual onset, worse with swallowing",
  },
  "inHouseLabResults": {
    "labOrderResults": [],
    "reflexTestsPending": undefined,
    "resultsPending": undefined,
  },
  "inhouseMedications": [
    {
      "id": "ihm-200",
      "intakeInfo": {
        "date": "2026-01-15T11:05:00.000Z",
        "dose": "200 mg",
        "patientCouldNotConfirmDosage": undefined,
      },
      "isRenewal": undefined,
      "name": "Ibuprofen 200 mg",
      "practitioner": undefined,
      "resourceId": "ms-in-house",
      "status": "completed",
      "type": "scheduled",
    },
  ],
  "mechanismOfInjury": {
    "resourceId": "cond-moi",
    "text": "No injury",
  },
  "medicalDecision": {
    "resourceId": "ci-mdm",
    "text": "Viral pharyngitis, low complexity decision making",
  },
  "medications": [
    {
      "id": "med-albuterol",
      "intakeInfo": {
        "date": "2026-01-14",
        "dose": "2 puffs",
        "patientCouldNotConfirmDosage": undefined,
      },
      "isRenewal": undefined,
      "name": "Albuterol inhaler",
      "practitioner": {
        "reference": "Practitioner/33333333-3333-4333-8333-333333333333",
      },
      "resourceId": "ms-current-albuterol",
      "status": "active",
      "type": "as-needed",
    },
  ],
  "notes": [
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-internal",
      "text": "internal note text",
      "type": "internal",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-intake",
      "text": "intake note text",
      "type": "intake",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-vitals",
      "text": "vitals note text",
      "type": "vitals",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-screening",
      "text": "screening note text",
      "type": "screening",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-medication",
      "text": "medication note text",
      "type": "medication",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-immunization",
      "text": "immunization note text",
      "type": "immunization",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-allergy",
      "text": "allergy note text",
      "type": "allergy",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-intake-medication",
      "text": "intake-medication note text",
      "type": "intake-medication",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-medical-condition",
      "text": "medical-condition note text",
      "type": "medical-condition",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-surgical-history",
      "text": "surgical-history note text",
      "type": "surgical-history",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-hospitalization",
      "text": "hospitalization note text",
      "type": "hospitalization",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-addendum",
      "text": "addendum note text",
      "type": "addendum",
    },
  ],
  "observations": [
    {
      "field": "covid-symptoms",
      "resourceId": "obs-screening-covid",
      "value": true,
    },
    {
      "derivedFrom": undefined,
      "field": "travel-usa",
      "note": "Asked on intake",
      "resourceId": "obs-screening-travel",
      "value": "No recent travel",
    },
    {
      "derivedFrom": undefined,
      "field": "ai-history-of-present-illness",
      "note": undefined,
      "resourceId": "obs-ai-hpi",
      "value": "Patient reports three days of sore throat.",
    },
  ],
  "patientHasPreviousVisits": [],
  "patientId": "22222222-2222-4222-8222-222222222222",
  "patientInfoConfirmed": {
    "value": true,
  },
  "practitioners": [
    {
      "id": "33333333-3333-4333-8333-333333333333",
      "name": [
        {
          "family": "Provider",
          "given": [
            "Golden",
          ],
          "suffix": [
            "MD",
          ],
        },
      ],
      "resourceType": "Practitioner",
    },
  ],
  "preferredPharmacies": [
    {
      "address": "1 Main St, Chicago, IL 60601",
      "name": "Walgreens #100",
      "phone": "312-555-0100",
    },
  ],
  "prescribedMedications": [
    {
      "added": "2026-01-15T12:00:00.000Z",
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "instructions": "Take one tablet daily",
      "isRenewal": undefined,
      "name": "Cetirizine 10 mg tablet",
      "pharmacyId": "42",
      "prescriptionId": "rx-abc-123",
      "provider": "33333333-3333-4333-8333-333333333333",
      "resourceId": "mr-erx",
      "status": "active",
    },
  ],
  "procedures": [
    {
      "bodySide": "left",
      "bodySite": "arm",
      "complications": undefined,
      "consentObtained": true,
      "cptCodes": [
        {
          "code": "12001",
          "display": "Simple repair of superficial wounds",
          "modifier": undefined,
          "resourceId": "proc-cpt-12001",
        },
      ],
      "diagnoses": [
        {
          "addedViaLabOrder": false,
          "code": "J02.9",
          "display": "Acute pharyngitis, unspecified",
          "isPrimary": false,
          "resourceId": "dx-primary",
        },
      ],
      "documentedBy": undefined,
      "documentedDateTime": "2026-01-15T11:30:00.000Z",
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "medicationUsed": undefined,
      "patientResponse": undefined,
      "performerType": "provider",
      "postInstructions": undefined,
      "procedureDateTime": "2026-01-15T11:00:00.000Z",
      "procedureDetails": undefined,
      "procedureType": "laceration-repair",
      "resourceId": "sr-procedure",
      "specimenSent": undefined,
      "suppliesUsed": undefined,
      "technique": [
        "simple",
      ],
      "timeSpent": undefined,
    },
  ],
  "radiologyOrders": [
    {
      "clinicalHistory": undefined,
      "cptCode": "73030",
      "cptCodeDisplay": "X-ray shoulder",
      "diagnoses": [
        {
          "code": "S43.401A",
          "display": "Unspecified sprain of right shoulder joint",
        },
      ],
      "diagnosis": "S43.401A — Unspecified sprain of right shoulder joint",
      "external": undefined,
      "finalReport": "PHA+Tm8gYWN1dGUgZnJhY3R1cmUuPC9wPg==",
      "laterality": undefined,
      "performedBy": undefined,
      "performingOrganization": undefined,
      "preliminaryReport": undefined,
      "safetyFlags": undefined,
      "serviceRequestId": "sr-radiology",
      "studyName": undefined,
      "studyType": "73030 — X-ray shoulder",
      "timeWindow": undefined,
    },
  ],
  "reasonForVisit": {
    "text": "Sore throat",
  },
  "ros": {
    "resourceId": "cond-ros",
    "text": "Negative except as noted",
  },
  "surgicalHistoryNote": {
    "resourceId": "proc-surgical-history-note",
    "text": "Uncomplicated recovery",
  },
  "vitalsObservations": [
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "field": "vital-temperature",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "observationMethod": undefined,
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "obs-vital-temperature",
      "value": 38.2,
    },
  ],
}
`;

exports[`get-chart-data mapping layer — golden fixture > progress-note mode (useChartFields with progressNoteChartDataRequestedFields) > matches the golden snapshot 1`] = `
{
  "accident": {
    "date": "2026-01-10",
    "resourceId": "cond-accident",
    "state": "IL",
    "type": [
      "AA",
    ],
  },
  "addToVisitNote": {
    "value": true,
  },
  "addendumNote": {
    "text": "Legacy single-string addendum",
  },
  "chiefComplaint": {
    "resourceId": "cond-chief-complaint",
    "text": "Sore throat for 3 days",
  },
  "disposition": {
    "followUp": [
      {
        "note": "ENT if symptoms persist",
        "type": "ent",
      },
    ],
    "followUpIn": 3,
    "labService": [],
    "note": "Follow up with PCP in 3 days",
    "nothingToEatOrDrink": undefined,
    "reason": undefined,
    "refusalOfEmsTransport": undefined,
    "specialty": undefined,
    "specialtyOther": undefined,
    "type": "pcp",
    "virusTest": [],
  },
  "episodeOfCare": [
    {
      "code": "hospitalization",
      "display": "Pneumonia (2024)",
      "resourceId": "eoc-pneumonia",
    },
  ],
  "externalLabResults": {
    "labOrderResults": [],
    "resultsPending": undefined,
  },
  "historyOfPresentIllness": {
    "resourceId": "cond-hpi",
    "text": "Gradual onset, worse with swallowing",
  },
  "inHouseLabResults": {
    "labOrderResults": [],
    "reflexTestsPending": undefined,
    "resultsPending": undefined,
  },
  "mechanismOfInjury": {
    "resourceId": "cond-moi",
    "text": "No injury",
  },
  "medicalDecision": {
    "resourceId": "ci-mdm",
    "text": "Viral pharyngitis, low complexity decision making",
  },
  "notes": [
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-intake",
      "text": "intake note text",
      "type": "intake",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-vitals",
      "text": "vitals note text",
      "type": "vitals",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-screening",
      "text": "screening note text",
      "type": "screening",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-medication",
      "text": "medication note text",
      "type": "medication",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-allergy",
      "text": "allergy note text",
      "type": "allergy",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-intake-medication",
      "text": "intake-medication note text",
      "type": "intake-medication",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-medical-condition",
      "text": "medical-condition note text",
      "type": "medical-condition",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-surgical-history",
      "text": "surgical-history note text",
      "type": "surgical-history",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-hospitalization",
      "text": "hospitalization note text",
      "type": "hospitalization",
    },
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "authorName": "Golden Provider",
      "deleted": false,
      "edited": false,
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "note-addendum",
      "text": "addendum note text",
      "type": "addendum",
    },
  ],
  "patientId": "22222222-2222-4222-8222-222222222222",
  "patientInfoConfirmed": {
    "value": true,
  },
  "practitioners": [
    {
      "id": "33333333-3333-4333-8333-333333333333",
      "name": [
        {
          "family": "Provider",
          "given": [
            "Golden",
          ],
          "suffix": [
            "MD",
          ],
        },
      ],
      "resourceType": "Practitioner",
    },
  ],
  "prescribedMedications": [
    {
      "added": "2026-01-15T12:00:00.000Z",
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "instructions": "Take one tablet daily",
      "isRenewal": undefined,
      "name": "Cetirizine 10 mg tablet",
      "pharmacyId": "42",
      "prescriptionId": "rx-abc-123",
      "provider": "33333333-3333-4333-8333-333333333333",
      "resourceId": "mr-erx",
      "status": "active",
    },
  ],
  "procedures": undefined,
  "radiologyOrders": [
    {
      "clinicalHistory": undefined,
      "cptCode": "73030",
      "cptCodeDisplay": "X-ray shoulder",
      "diagnoses": [
        {
          "code": "S43.401A",
          "display": "Unspecified sprain of right shoulder joint",
        },
      ],
      "diagnosis": "S43.401A — Unspecified sprain of right shoulder joint",
      "external": undefined,
      "finalReport": "PHA+Tm8gYWN1dGUgZnJhY3R1cmUuPC9wPg==",
      "laterality": undefined,
      "performedBy": undefined,
      "performingOrganization": undefined,
      "preliminaryReport": undefined,
      "safetyFlags": undefined,
      "serviceRequestId": "sr-radiology",
      "studyName": undefined,
      "studyType": "73030 — X-ray shoulder",
      "timeWindow": undefined,
    },
  ],
  "reasonForVisit": {
    "text": "Sore throat",
  },
  "ros": {
    "resourceId": "cond-ros",
    "text": "Negative except as noted",
  },
  "surgicalHistoryNote": {
    "resourceId": "proc-surgical-history-note",
    "text": "Uncomplicated recovery",
  },
  "vitalsObservations": [
    {
      "authorId": "33333333-3333-4333-8333-333333333333",
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "field": "vital-temperature",
      "lastUpdated": "2026-01-15T12:00:00.000Z",
      "observationMethod": undefined,
      "patientId": "22222222-2222-4222-8222-222222222222",
      "resourceId": "obs-vital-temperature",
      "value": 38.2,
    },
  ],
}
`;

exports[`get-chart-data mapping layer — golden fixture > unscoped mode (the layout-level useChartData call) > matches the golden snapshot 1`] = `
{
  "accident": {
    "date": "2026-01-10",
    "resourceId": "cond-accident",
    "state": "IL",
    "type": [
      "AA",
    ],
  },
  "addToVisitNote": {
    "value": true,
  },
  "addendumNote": {
    "text": "Legacy single-string addendum",
  },
  "aiChat": {
    "documents": [
      {
        "content": [
          {
            "attachment": {
              "title": "AI consult note",
              "url": "https://z3.example/ai/consult-note.json",
            },
          },
        ],
        "context": {
          "encounter": [
            {
              "reference": "Encounter/11111111-1111-4111-8111-111111111111",
            },
          ],
        },
        "date": "2026-01-15T12:00:00.000Z",
        "extension": [
          {
            "url": "https://extensions.fhir.zapehr.com/provider",
            "valueReference": {
              "reference": "Practitioner/33333333-3333-4333-8333-333333333333",
            },
          },
        ],
        "id": "dr-ai-consult-note",
        "resourceType": "DocumentReference",
        "status": "current",
        "subject": {
          "reference": "Patient/22222222-2222-4222-8222-222222222222",
        },
        "type": {
          "coding": [
            {
              "code": "11488-4",
              "display": "Consult note",
              "system": "http://loinc.org",
            },
          ],
        },
      },
    ],
    "hasPendingRecording": true,
    "providers": [],
  },
  "allergies": [
    {
      "current": true,
      "id": "1001",
      "lastUpdated": undefined,
      "name": "Penicillin",
      "note": "hives",
      "resourceId": "allergy-penicillin",
    },
  ],
  "chiefComplaint": {
    "resourceId": "cond-chief-complaint",
    "text": "Sore throat for 3 days",
  },
  "conditions": [
    {
      "code": "J45.909",
      "current": true,
      "display": "Unspecified asthma, uncomplicated",
      "lastUpdated": undefined,
      "note": undefined,
      "resourceId": "cond-asthma",
    },
  ],
  "cptCodes": [
    {
      "code": "99213",
      "display": "Office visit, established patient, low",
      "modifier": undefined,
      "resourceId": "proc-cpt-99213",
    },
    {
      "code": "12001",
      "display": "Simple repair of superficial wounds",
      "modifier": undefined,
      "resourceId": "proc-cpt-12001",
    },
  ],
  "diagnosis": [
    {
      "addedViaLabOrder": false,
      "code": "J02.9",
      "display": "Acute pharyngitis, unspecified",
      "isPrimary": true,
      "resourceId": "dx-primary",
    },
    {
      "addedViaLabOrder": false,
      "code": "R50.9",
      "display": "Fever, unspecified",
      "isPrimary": false,
      "resourceId": "dx-secondary",
    },
  ],
  "disposition": undefined,
  "emCode": {
    "code": "99214",
    "display": "Office visit, established patient, moderate",
    "modifier": undefined,
    "resourceId": "proc-em-99214",
  },
  "examObservations": [
    {
      "field": "normal-general",
      "label": "General",
      "note": "Well appearing",
      "resourceId": "obs-exam-general",
      "value": true,
    },
  ],
  "historyOfPresentIllness": {
    "resourceId": "cond-hpi",
    "text": "Gradual onset, worse with swallowing",
  },
  "instructions": [
    {
      "educationDocRefId": undefined,
      "resourceId": "comm-instruction",
      "text": "Rest, fluids, ibuprofen as needed",
      "title": "Home care",
    },
  ],
  "mechanismOfInjury": {
    "resourceId": "cond-moi",
    "text": "No injury",
  },
  "medications": [
    {
      "id": "med-albuterol",
      "intakeInfo": {
        "date": "2026-01-14",
        "dose": "2 puffs",
        "patientCouldNotConfirmDosage": undefined,
      },
      "isRenewal": undefined,
      "name": "Albuterol inhaler",
      "practitioner": {
        "reference": "Practitioner/33333333-3333-4333-8333-333333333333",
      },
      "resourceId": "ms-current-albuterol",
      "status": "active",
      "type": "as-needed",
    },
  ],
  "observations": [
    {
      "field": "covid-symptoms",
      "resourceId": "obs-screening-covid",
      "value": true,
    },
    {
      "derivedFrom": undefined,
      "field": "travel-usa",
      "note": "Asked on intake",
      "resourceId": "obs-screening-travel",
      "value": "No recent travel",
    },
    {
      "derivedFrom": undefined,
      "field": "ai-history-of-present-illness",
      "note": undefined,
      "resourceId": "obs-ai-hpi",
      "value": "Patient reports three days of sore throat.",
    },
  ],
  "patientId": "22222222-2222-4222-8222-222222222222",
  "patientInfoConfirmed": {
    "value": true,
  },
  "practitioners": [],
  "procedures": [
    {
      "bodySide": "left",
      "bodySite": "arm",
      "complications": undefined,
      "consentObtained": true,
      "cptCodes": [
        {
          "code": "12001",
          "display": "Simple repair of superficial wounds",
          "modifier": undefined,
          "resourceId": "proc-cpt-12001",
        },
      ],
      "diagnoses": [
        {
          "addedViaLabOrder": false,
          "code": "J02.9",
          "display": "Acute pharyngitis, unspecified",
          "isPrimary": false,
          "resourceId": "dx-primary",
        },
      ],
      "documentedBy": undefined,
      "documentedDateTime": "2026-01-15T11:30:00.000Z",
      "encounterId": "11111111-1111-4111-8111-111111111111",
      "medicationUsed": undefined,
      "patientResponse": undefined,
      "performerType": "provider",
      "postInstructions": undefined,
      "procedureDateTime": "2026-01-15T11:00:00.000Z",
      "procedureDetails": undefined,
      "procedureType": "laceration-repair",
      "resourceId": "sr-procedure",
      "specimenSent": undefined,
      "suppliesUsed": undefined,
      "technique": [
        "simple",
      ],
      "timeSpent": undefined,
    },
  ],
  "ros": {
    "resourceId": "cond-ros",
    "text": "Negative except as noted",
  },
  "rosObservations": [
    {
      "field": "ros-fever",
      "label": "Fever",
      "note": undefined,
      "resourceId": "obs-ros-fever",
      "value": true,
    },
  ],
  "schoolWorkNotes": [
    {
      "date": "2026-01-15T12:00:00.000Z",
      "id": "dr-school-note",
      "name": "school-note.pdf",
      "published": true,
      "type": "school",
      "url": "https://z3.example/visit-notes/school-note.pdf",
    },
  ],
  "surgicalHistory": [
    {
      "code": "42820",
      "display": "Tonsillectomy and adenoidectomy",
      "modifier": undefined,
      "resourceId": "proc-surgical-tonsillectomy",
    },
  ],
  "surgicalHistoryNote": {
    "resourceId": "proc-surgical-history-note",
    "text": "Uncomplicated recovery",
  },
}
`;
